# knmy

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
docs/source/: authors.rst  conf.py  index.rst  license.rst
knmy/: __init__.py  knmy.py  parser.py
tests/: test_knmy.py  test_parser.py
tests/test_data/: daily_multiple_stations.txt  daily_multiple_vars.txt  daily_rain.txt  daily_single_station.txt  daily_single_var.txt  data.csv  data_rain.csv  disclaimer.txt  disclaimer_rain.txt  hourly.txt  inseason.txt  stations.csv  variables.txt  variables_rain.txt
