[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knmy"
version = "1.5.1"
authors = [
  { name="Bart Hoekstra", email="barthoekstra@gmail.com" },
]
description = "Python package for downloading and processing weather data from the automated weather stations of the Dutch Meteorological Institute (KNMI)."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/barthoekstra/knmy"
"Bug Tracker" = "https://github.com/barthoekstra/knmy//issues"
