[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knmy"
version = "1.5.2"
authors = [
  {name="Bart Hoekstra", email="barthoekstra@gmail.com"},
]
description = "Python package for downloading and processing weather data from the automated weather stations of the Dutch Meteorological Institute (KNMI)."
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["knmi", "weather station", "API", "hourly", "daily", "wind", "rain", "temperature", "climate", "weather"]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/barthoekstra/knmy"
"Bug Tracker" = "https://github.com/barthoekstra/knmy/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
testing = ["mock", "pytest", "sh>=1.08"]

[tool.setuptools.packages]
find = { exclude = ["docs", "tests*"] }

[tool.setuptools]
include-package-data = true